# SkyNode

./: .gitignore  CMakeLists.txt  README.md  settings.ini
src/: CMakeLists.txt  buffer.cpp  buffer.h  main.cpp  main.h  node.cpp  node.h
src/lib/: CMakeLists.txt
